Change package name to serverless-lambda-http-response (#1)
* Change package name to serverless-lambda-http-response

* Don't wrap the response data in another object. This will make the reponse asymetric when viewed from the sender and the receiver.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "http-response",
-  "version": "1.0.0",
+  "name": "serverless-lambda-http-response",
+  "version": "1.0.1",
   "description": "Helper to create HTTP response object for AWS lambda proxy",
   "main": "http-response.js",
   "scripts": {
