--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "serverless-lambda-http-response",
-  "version": "1.0.3",
-  "description": "Helper to create HTTP response object for AWS lambda proxy",
+  "version": "1.0.4",
+  "description": "Wrapper to abstract service provider specific implementation on HTTP trigger response.",
   "main": "http-response.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
